Fix alignments in the about page mobile version

--- a/css/about.css
+++ b/css/about.css
@@ -8,18 +8,23 @@
   margin: auto;
 }
 
+
+#showcase {
+  text-align: center;
+}
+
 #showcase .title {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .b-info {
   text-align: center;
   line-height: 1.5;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 #showcase > .b-info p {
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .shukr {
@@ -39,8 +44,14 @@
   margin-top: 15px;
 }
 
-.hero {
+.agenda {
   width: 90%;
+  margin: 50px auto;
+  gap: 20px;
+}
+
+.agenda > div {
+  width: 100%;
   height: 200px;
   background-repeat: no-repeat;
   background-repeat:  center center;
@@ -56,8 +67,12 @@
   background-image: url(../images/ps.jpg);
 }
 
-.hero > div {
-  background-color: rgba(236, 82, 66, 0.7);
+.hr {
+  display: none;
+}
+
+.agenda > div > div {
+  background-color: rgba(236, 82, 66, 0.8);
   z-index: 3;
   width: 100%;
   height: 100%;
@@ -65,7 +80,8 @@
   font-size: 16px;
 }
 
-.d-mobile {
+.d-mobile,
+.hr {
   display: block;
 }
 
@@ -76,6 +92,42 @@
 .logo {
   display: none;
 }
+
+footer{
+  display: block;
+  width: 100%;
+  padding: 50px;
+  background-color: var(--primary-color);
+  text-align: center;
+}
+
+footer > ul img {
+  height: auto;
+  margin: 0 20px;
+}
+
+footer > ul {
+  margin-top: 30px;
+}
+
+footer p {
+  color: var(--ash-color);
+  margin-bottom: 10px;
+}
+
+.fb {
+  width: 40px;
+  margin-right: 35px;
+}
+
+.twitter {
+  width: 60px;
+}
+
+.linkedin {
+  width: 50px;
+}
+
 @media (min-width: 768px) {
   h1 {
     text-align: center;
@@ -97,15 +149,18 @@
     text-decoration: none;
     color: var(--primary-color);
     gap: 5px;
-    /* font-weight: bold; */
   }
   
+  #showcase h1{
+    text-align: center;
+  }
+
   #showcase .description {
     background-color: #fff;
     border: 1px solid var(--ash-color);
     text-align: center;
     width: 80%;
-    margin-top: 15px;
+    margin: 15px auto;
     font-style: italic;
     line-height: 2;
     padding: 20px;
@@ -115,6 +170,11 @@
     font-size: 20px;
   }
 
+  #showcase > .b-info p {
+    font-size: 17px;
+    margin: 0;
+  }
+
   .agenda {
     width: 70%;
     margin: 50px auto;
@@ -122,7 +182,7 @@
     gap: 20px;
   }
 
-  .hero > div:hover {
+  .agenda > div > div:hover {
     background-color: rgba(236, 82, 66, 0.4);
     transition: 0.4s;
     transform: scale(1.05);
@@ -139,7 +199,27 @@
     padding: 50px;
   }
 
+  footer > ul img {
+  height: auto;
+  margin: 0 30px;
+}
 
+footer > ul img:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
+}
 
+  .fb {
+    width: 50px;
+    margin-right: 35px;
+  }
+  
+  .twitter {
+    width: 80px;
+  }
+  
+  .linkedin {
+    width: 60px;
+  }
   
 }
