--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,19 @@ nav {
 }
 
 #showcase {
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
   padding-bottom: 70px;
   text-align: left;
   width: 90%;
+  height: 70%;
   margin: auto;
+}
+
+#showcase p,
+#showcase small {
+  margin: 10px 0;
 }
 
 h1 {
@@ -263,43 +272,8 @@ hr {
   font-weight: 700 !important;
 }
 
-footer{
-  width: 100%;
-  padding: 50px;
-  background-color: var(--primary-color);
-  text-align: center;
-}
-
-footer > ul {
-  margin-top: 30px;
-}
-
-footer p {
-  color: var(--ash-color);
-  margin-bottom: 10px;
-}
-
-
-footer > ul img {
-  height: auto;
-  margin: 0 30px;
-}
-
-footer > ul img:hover {
-  transform: scale(1.2);
-  transition: 0.5s;
-}
-.fb {
-  width: 50px;
-  margin-right: 35px;
-}
-
-.twitter {
-  width: 80px;
-}
-
-.linkedin {
-  width: 60px;
+footer {
+  display: none;
 }
 
 .logo {
@@ -444,5 +418,46 @@ footer > ul img:hover {
 
   #stock .btn:hover {
     color: var(--ash-color)
+  }
+
+  footer{
+    display: block;
+    width: 100%;
+    padding: 50px;
+    background-color: var(--primary-color);
+    text-align: center;
+  }
+  
+  footer > ul {
+    margin-top: 30px;
+  }
+  
+  footer p {
+    color: var(--ash-color);
+    margin-bottom: 10px;
+  }
+  
+  
+  footer > ul img {
+    height: auto;
+    margin: 0 30px;
+  }
+  
+  footer > ul img:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+  }
+
+  .fb {
+    width: 50px;
+    margin-right: 35px;
+  }
+  
+  .twitter {
+    width: 80px;
+  }
+  
+  .linkedin {
+    width: 60px;
   }
 }
